[package]
name = "db"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.9.0"
actix-rt = "2.10.0"
serde = { version = "1.0.208", features = ["derive"] }

dotenv = "0.15.0"
sqlx = { version = "0.8.0", features = ["postgres","runtime-tokio-rustls","macros","chrono"] }

chrono = { version = "0.4.38", features = ["serde"] }